updated some exercises

--- a/html/ex_14/creat_user.html
+++ b/html/ex_14/creat_user.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>created user</title>
 </head>
 <body>
-    It all started with an HTML file!!
+        <h1>created user</h1>
+        <hr/>
+        <p> now you can <a href="#"</p>
 </body>
 </html>
