--- a/html/index1.html
+++ b/html/index1.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html> 
-<html></html>
-<head></head>
-<title>
-    Hello World
-</title>
-<body>
-    It all started with an HTML file!!
-</body>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Helloe World</title>
+    </head>
+    <body>
+            It all started with an HTML file!!
+    </body>
+</html>
