--- a/html/index4.html
+++ b/html/index4.html
@@ -1,70 +1,63 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
-<head>
-    <title>
-        Hogwarts
-    </title>
-<body>
+    <head>
+        <Title>Hogwarts</Title>
+    </head>
+    <body>
         <h1>Hogwarts</h1>
         <hr>
-        <h2>Houses<h2>
+        <h2>Houses</h2>
         <ul>
-                <li>Unordered list item</li>
-                <li>
-                  <ol>
-                    <li><strong>Gryffindor<strong></li>
-                    <li>Hufflepuff</li>
-                    <li>Ravenclaw</li>
-                    <li>Slytherin</li>
-                  </ol>
-                </li>
-              </ul>
-              <h2>Notable teachers and staff members</h2>
-              <ol>
-                    <li>Argus Filch</li>
-                    <li>Filius Flitwick</li>
-                    <li>Gilderoy Lockhart</li>
-                    <li>Minerva McGonagall</li>
-                    <li>Poppy Pomfrey</li>
-                    <li>Quirinus Quirrell</li>
-                    <li>Horace Slughorn</li>
-                    <li>Pomona Sprout</li>
-                    <li>Sybill Trelawney</li>
-                  </ol>
-                  <ul>
-                        <li>Unordered list item</li>
-                        <li>
-                          <ol>
-                              <li>* Hogwarts ghosts</li>
-                              <li>  1. The Bloody Baron</li>
-                              <li>  2. The Fat Friar</li>
-                              <li> 3. The Grey Lady</li>
-                              <li>  4. Nearly Headless Nick</li>
-                              <li>*	Hogwarts founders</li>
-                              <li>  1. Godric <span>Gryffindor<span></li>
-                              <li>  2. Helga <span>Hufflepuff</span></li>
-                              <li>  3. Rowena <span>Ravenclaw</span></li>
-                              <li>  4.Salazar Slytherin<li>
-                          </ol>
-                        </li>
-                      </ul>
-                      <hr>
-                      <h2>List of spells<h2>
-                            <dl>
-                                <dt>Aberto</dt>
-                                <dd>A spell presumably used to open objects such as doors or windows.</dd>
-                                <dt>Accio</dt>
-                                <dd>This charm summons an object to the caster, potentially over a significant distance.</dd>
-                                <dt>Expecto Patronum</dt>
-                                <dd>Evokes a partially-tangible positive energy force known as a Patronus</dd>
-                                <dt>Sectumsempra</dt>
-                                <dd>A dark spell that creates large, blood-oozing gashes on the subject as if said subject had been "slashed by a sword".</dd>
-                                <dt>Immobulus</dt>
-                                <dd>Renders living targets immobile.</dd>
-                                <dt>Partis Temporus</dt>
-                                <dd>Creates a temporary gap through protective magical barriers.</dd>
-                                <dt>Locomotor </dt>
-                                <dd>The spell causes the named object to rise in the air and move around at the will of the caster.</dd>
-                            </dl>        
-</body>
+            <li><strong>Gryffindor</strong></li>
+            <li>Hufflepuff</li>
+            <li>Ravenclaw</li>
+            <li>Slytherin</li>
+        </ul>
+        <h2>Notable teachers and staff members</h2>
+        <ol>
+            <li>Argus Filch</li>
+            <li>Filius Flitwick</li>
+            <li>Gilderoy Lockhart</li>
+            <li>Minerva McGonagall</li>
+            <li>Poppy Pomfrey</li>
+            <li>Quirinus Quirrell</li>
+            <li>Horace Slughorn</li>
+            <li>Pomona Sprout</li>
+            <li>Sybill Trelawney</li>
+        </ol>
+        <ul>
+            <li>Hogwarts ghosts</li>
+            <ol>
+                <li>The Bloody Baron</li>
+                <li>The Fat Friar</li>
+                <li>The Grey Lady</li>
+                <li>Nearly Headless Nick</li>
+            </ol>
+            <li>Hogwarts founders</li>
+            <ol>
+                <li>Godric <span>Gryffindor</span></li>
+                <li>Helga <span>Hufflepuff</span></li>
+                <li>Rowena <span>Ravenclaw</span></li>
+                <li>Salazar <span>Slytherin</span></li>
+            </ol>
+            <hr>
+            <h2>List of spells</h2>
+            <dl>
+                <dt>Aberto</dt>
+                <dd>A spell presumably used to open objects such as doors or windows.</dd>
+                <dt>Accio</dt>
+                <dd>This charm summons an object to the caster, potentially over a significant distance.</dd>
+                <dt>Expecto Patronum</dt>
+                <dd>Evokes a partially-tangible positive energy force known as a Patronus</dd>
+                <dt>Sectumsempra</dt>
+                <dd>A dark spell that creates large, blood-oozing gashes on the subject as if said subject had been "slashed by a sword".</dd>
+                <dt>Immobulus</dt>
+                <dd>Renders living targets immobile.</dd>
+                <dt>Partis Temporus</dt>
+                <dd>Creates a temporary gap through protective magical barriers.</dd>
+                <dt>Locomotor </dt>
+                <dd>The spell causes the named object to rise in the air and move around at the will of the caster.</dd>
+            </dl>
+        </ul>
+    </body>
 </html>
